Fix master detail styles when collapsed

--- a/src/index.css
+++ b/src/index.css
@@ -126,10 +126,11 @@ td > .radio-boolean > .radio-group {
 .master-detail {
     flex: 1 1 auto;
     display: flex;
+    flex-flow: row;
 }
 
 .master-detail > ul {
-    width: 20%;
+    flex: 0 0 175px;
     padding: 0;
     margin: 0;
     list-style: none;
